apps/netalertx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netalertx
  namespace: netalertx
spec:
  type: ClusterIP
  selector:
    app: netalertx
  ports:
    - name: http
      port: 20211
      targetPort: http
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: netalertx-hub
  namespace: netalertx
spec:
  type: LoadBalancer
  selector:
    app: netalertx
  ports:
    - name: graphql
      port: 20212
      targetPort: graphql
      nodePort: 30212
